# csc2026

./: CMakeLists.txt
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
exercises/SD-E1-parallel-event-processing/: README.md
exercises/SD-E1-parallel-event-processing/starter/src/: EventProcessor.cpp  main.cpp
exercises/TT-E1-debugging-sanitizers/starter/src/: TrackReconstructor.cpp
exercises/TT-E2-docs-and-ci/ci-parallel-root/plots/: histogram_data_B.GamGam.root  merged_histograms_data.root
src/: EventProcessor.cpp
tests/: test_track_reconstructor.cpp
